--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a href="#About us" class="nav-link"> About Contact Homepage</a>
+                    <a href="#About us" class="nav-link"> Homepage About Contact</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 
-<!--- ShowCase -->
+<!-- ShowCase -->
 
 <section class="bg-dark text-light pt-5 text-center text-sm-start">
     <div class="container">
@@ -44,7 +44,9 @@
                 </p>
                 <button class="btn-sm"> Sign Up Today</button>
             </div>
-            <img src="images/bean.jpeg" alt="coffee bean" height="200px" width="500px">
+            <div>
+            <img id="image" src="images/bean.jpg" alt="coffee bean" height="200px" width="500px">
+            </div>
         </div>
     </div>
 </section>
