--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dev By Coffee</title>
+    <title>Death By Coffee</title>
 
     <!-- BOOTSTRAP CSS LINK -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +21,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <!-- List Created Nav Bar Links -->
+        <!-- List Created Nav Bar Links (top right corner) -->
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
@@ -32,7 +32,7 @@
     </div>
 </nav>
 
-<!-- ShowCase -->
+<!-- Additional Info with Images and sign up link  -->
 
 <section class="bg-dark text-light pt-5 text-center text-sm-start">
     <div class="container">
